--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           dangerous-clean-slate: true
-          server-dir: /indira/
+          server-dir: /
           protocol: ftps
           exclude: |
             **/node_modules/**
