--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@versoly/react-taos": "^0.1.0",
+    "aos": "^2.3.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "taos": "^1.0.5"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/aos": "^3.0.7",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
